--- a/src/app/pages/planes-entrenamiento/planes-entrenamiento.page.html
+++ b/src/app/pages/planes-entrenamiento/planes-entrenamiento.page.html
@@ -29,7 +29,7 @@
           <ion-label position="stacked">Foto</ion-label>
           <ion-input [(ngModel)]="objetivo.img" placeholder="https://..."></ion-input>
         </ion-item>
-        <ion-button expand="block" (click)="addObjetivoP()">Agregar autor</ion-button>
+        <ion-button expand="block" (click)="addObjetivoP()">Agregar Objetivo</ion-button>
   
         <ion-list>
           <ion-item button *ngFor="let aut of objetivos" [routerLink]="['/', 'objetivos', objetivo.id]">
@@ -53,20 +53,20 @@
       <div *ngSwitchCase="'plannings'">
         <ion-item>
           <ion-label position="stacked">Planes</ion-label>
-          <ion-input [(ngModel)]="plan.nombreplan" placeholder="nombreplan"></ion-input>
+          <ion-input [(ngModel)]="plan.nombreresultado" placeholder="nombreresultado"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="stacked">Objetivo</ion-label>
           <ion-select [(ngModel)]="plan.objetivoId">
-            <ion-select-option *ngFor="let aut of objetivos" [value]="obj.id">{{ obj.nombre }}</ion-select-option>
+            <ion-select-option *ngFor="let obj of objetivos" [value]="obj.id">{{ obj.nombre }}</ion-select-option>
           </ion-select>
         </ion-item>
         <ion-button expand="block" (click)="addPlanP()">Agregar Plan</ion-button>
   
         <ion-list>
-          <ion-item *ngFor="let plannings of libros | async">
+          <ion-item *ngFor="let planning of planes | async">
             <ion-label>
-              <h2>{{ planning.nombreplan }}</h2>
+              <h2>{{ planning.nombreresultado }}</h2>
               <p>Objetivo: {{ planning.objetivo_nombre }}</p>
             </ion-label>
             <ion-button color="warning" (click)="editPlanP(planning.id)">
